@@ -30,7 +30,8 @@
 #define __CDAUDIO_H
 
 int	CDAudio_Init (void);
-void	CDAudio_Play (byte track, qboolean looping);
+int	CDAudio_Play (byte track, qboolean looping);
+	/* returns 0 for success, -1 for failure. */
 void	CDAudio_Stop (void);
 void	CDAudio_Pause (void);
 void	CDAudio_Resume (void);
